--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "abstract-syntax-trees",
+  "source": "src/index.html",
+  "scripts": {
+    "start": "parcel",
+    "build": "parcel build"
+  },
   "devDependencies": {
     "parcel": "^2.9.3"
   }
