--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "abstract-syntax-trees",
   "source": "src/index.html",
+  "public-url": "https://github.com/lewpiotr1701/ojs-abstract-syntax-trees",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --public-url ./",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "gh-pages": "^6.0.0"
   }
 }
